deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: warehouse-to-model
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    - api-staging.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /warehouse-to-model
        backend:
          serviceName: warehouse-to-model-production
          servicePort: 80
  - host: api-staging.dd-decaf.eu
    http:
      paths:
      - path: /warehouse-to-model
        backend:
          serviceName: warehouse-to-model-staging
          servicePort: 80
